deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acs-sippy
  labels:
    app: acs-sippy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: acs-sippy
